fix(calendar): #MA-1086 fix calendar icon not centered (#67)

--- a/scss/specifics/calendar/_calendar.scss
+++ b/scss/specifics/calendar/_calendar.scss
@@ -46,3 +46,11 @@ body.calendar {
 calendar .week-switcher .date-picker-icon {
   margin-left: 0 !important;
 }
+
+.calendar {
+  .week-switcher {
+    .date-picker-icon {
+      left:42px;
+    }
+  }
+}
